syntax = "proto3";
package echopb;
option go_package = "./;demo";
import "google/api/annotations.proto";

message StringMessage{
  string value = 1;
}

service EchoService{
  rpc Echo(StringMessage) returns (StringMessage){
    option (google.api.http) = {
      post: "/v1/example/echo"
      body: "*"
    };
  }
}